Form Maker changelog file
=========================

Next Version
- Removed deprecated .live() jQuery method - it's replaced by .on()
- Make it possible to not display field identifier on form edit page
- Confirmation page template (summary_page.tpl) and receipt page template (form_processed.tpl) moved view directory

Version 2.0.0
- Created possibility to store user answers in database
- Answers are viewable in admin panel - "Form maker" -> "See answers"
- Removed email sender field, since this is handled by eZ
- Recipients array is validated before sending the emails
- SQL generate script updated with new tables
- Improved D&D tolerance
- Changed the form removal confirmation text, because editor needs to know that he's removing also the answers
- Added possibility to set a CSS class for each form

Version 1.8.2
- Improved drag'n'drop functionality
- Fixed fatal error displayed when validating the 'Date (only year)' input
- Added ajax loader in admin panel

Version 1.8.1
- All documents except README.md moved into 'doc' folder
- Created Developer's guide, which can be found under 'doc/developer.md'
- Summary page contains the form ID since now - it helps when you want to override this page for particular form
- Added posibility to exclude form types from extension (by adding its ID into formmaker.ini)
- Not camel-cased ini variables fixed (so be aware when update'ing - in case when you have overrided original FormMaker templates)

Version 1.8
- After processing file attribute delete attachments when form data have been sent
- Setting file formmaker.ini.append.php renamed into formmaker.ini
- Added possibility to restrict the forms for which external scripts (both - processing and injecting) will be run
- Editors can set the email title for each form
- Created bash script (bin/sh/sql_schema.sh) for generating install.sql file
- Package containing Form class updated (package/form-1.8-1.ezpkg), however it's not mandatory to update it.