@@ -1,7 +1,6 @@
 #?ini charset="utf-8"?
 
 [FormmakerSettings]
-SendOnlyFilledData=false
 # if enabled, system will check for ShortDateFormat (defined in current locale) and try to execute adequate Regex (defined in this file)
 DynamicDateFormat=enabled
 DefaultDatepickerFormat=dd/mm/yy
@@ -49,3 +48,6 @@ DatepickerFormat=mm/dd/yy
 [Mail]
 MailClass=eZMail
 AttachmentsDir=formmaker
+
+[ViewSettings_default]
+SendOnlyFilledData=false
